--- a/Perspectives/Perspectives/Perspectives.xaml
+++ b/Perspectives/Perspectives/Perspectives.xaml
@@ -12,6 +12,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
 
         </Grid.RowDefinitions>
             
@@ -35,9 +36,22 @@
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="1">
                 <Button Click="Apply_Click" Margin="5,5,5,5" Padding="3,3,3,3">Apply</Button>
                 
-                <Button Click="SaveAs_Click" Margin="5,5,5,5" Padding="3,3,3,3">Save As...</Button>
-                <Button Click="Save_Click" Margin="5,5,5,5" Padding="3,3,3,3">Save</Button>
+                <Button Click="SaveAs_Click" Margin="5,5,5,5" Padding="3,3,3,3">Save Current As...</Button>
+                <Button Click="Save_Click" Margin="5,5,5,5" Padding="3,3,3,3">Save Current</Button>
                 <Button Click="Delete_Click" Margin="5,5,5,5" Padding="3,3,3,3">Delete</Button>
             </StackPanel>
+        
+        <Grid Grid.Row="2" x:Name="nameGrid" Visibility="Collapsed">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition  Width="2*"/>
+                <ColumnDefinition  Width="1*"/>
+                <ColumnDefinition  Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock VerticalAlignment="Center" Padding="5,5,5,5" Grid.Column="0">Name:</TextBlock>
+            <TextBox x:Name="txtName" Margin="5,5,5,5" Width="{Binding ElementName=Container,Path=ActualWidth}" HorizontalAlignment="Stretch" MaxWidth="200" Grid.Column="1"></TextBox>
+            <Button Margin="5,5,5,5" Grid.Column="2" Click="Button_Click">Ok</Button>
+            <Button Margin="5,5,5,5" Grid.Column="3" Click="Button_Click_1">Cancel</Button>
+        </Grid>
     </Grid>
 </UserControl>
